--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "finnhub": "^1.1.7",
-    "kafka-node": "^5.0.0",
+    "kafkajs": "^1.12.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
