--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,112 +1,9 @@
 version: "2"
-
-volumes:
-  metadata_data: {}
-  middle_var: {}
-  historical_var: {}
-  broker_var: {}
-  coordinator_var: {}
-  router_var: {}
-
 services:
-  postgres:
-    container_name: postgres
-    image: postgres:latest
-    volumes:
-      - metadata_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=FoolishPassword
-      - POSTGRES_USER=druid
-      - POSTGRES_DB=druid
-
-  # Need 3.5 or later for container nodes
   zookeeper:
-    container_name: zookeeper
-    image: zookeeper:3.5
-    environment:
-      - ZOO_MY_ID=1
-
-  coordinator:
-    image: apache/druid:0.17.0
-    container_name: coordinator
-    volumes:
-      - ./storage:/opt/data
-      - coordinator_var:/opt/druid/var
-    depends_on: 
-      - zookeeper
-      - postgres
+    image: wurstmeister/zookeeper
     ports:
-      - "8081:8081"
-    command:
-      - coordinator
-    env_file:
-      - environment
-
-  broker:
-    image: apache/druid:0.17.0
-    container_name: broker
-    volumes:
-      - broker_var:/opt/druid/var
-    depends_on: 
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8082:8082"
-    command:
-      - broker
-    env_file:
-      - environment
-
-  historical:
-    image: apache/druid:0.17.0
-    container_name: historical
-    volumes:
-      - ./storage:/opt/data
-      - historical_var:/opt/druid/var
-    depends_on: 
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8083:8083"
-    command:
-      - historical
-    env_file:
-      - environment
-
-  middlemanager:
-    image: apache/druid:0.17.0
-    container_name: middlemanager
-    volumes:
-      - ./storage:/opt/data
-      - middle_var:/opt/druid/var
-    depends_on: 
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8091:8091"
-    command:
-      - middleManager
-    env_file:
-      - environment
-
-  router:
-    image: apache/druid:0.17.0
-    container_name: router
-    volumes:
-      - router_var:/opt/druid/var
-    depends_on:
-      - zookeeper
-      - postgres
-      - coordinator
-    ports:
-      - "8888:8888"
-    command:
-      - router
-    env_file:
-      - environment
+      - "2181:2181"
   kafka:
     build: .
     container_name: kafka
