--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "finnhub": "^1.1.7",
-    "kafkajs": "^1.12.0",
+    "node-rdkafka": "^2.9.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
